First commited as before_72573_rev4