@@ -121,8 +121,8 @@ public class PreferenceStore extends EventManager implements
 				&& (oldValue == null || !oldValue.equals(newValue))) {
 			final PropertyChangeEvent pe = new PropertyChangeEvent(this, name,
 					oldValue, newValue);
-			for (int i = 0; i < finalListeners.length; ++i) {
-				final IPropertyChangeListener l = (IPropertyChangeListener) finalListeners[i];
+			for (Object finalListener : finalListeners) {
+				final IPropertyChangeListener l = (IPropertyChangeListener) finalListener;
 				SafeRunnable.run(new SafeRunnable(JFaceResources
 						.getString("PreferenceStore.changeError")) { //$NON-NLS-1$
 							@Override
@@ -547,7 +547,7 @@ public class PreferenceStore extends EventManager implements
 		if (oldValue != value) {
 			setValue(properties, name, value);
 			dirty = true;
-			firePropertyChangeEvent(name, new Long(oldValue), new Long(value));
+			firePropertyChangeEvent(name, Long.valueOf(oldValue), Long.valueOf(value));
 		}
 	}
 
