@@ -13,7 +13,6 @@ package org.eclipse.ui.internal.preferences;
 import java.util.Set;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.util.IPropertyChangeListener;
-import org.eclipse.jface.util.PropertyChangeEvent;
 
 /**
  * @since 3.1
@@ -22,12 +21,7 @@ public final class PreferenceStoreAdapter extends PropertyMapAdapter {
 
     private IPreferenceStore store;
 
-    private IPropertyChangeListener listener = new IPropertyChangeListener() {
-        @Override
-		public void propertyChange(PropertyChangeEvent event) {
-            firePropertyChange(event.getProperty());
-        }
-    };
+    private IPropertyChangeListener listener = event -> firePropertyChange(event.getProperty());
 
     public PreferenceStoreAdapter(IPreferenceStore toConvert) {
         this.store = toConvert;
@@ -59,11 +53,11 @@ public final class PreferenceStoreAdapter extends PropertyMapAdapter {
         }
 
         if (propertyType == Double.class) {
-            return new Double(store.getDouble(propertyId));
+			return Double.valueOf(store.getDouble(propertyId));
         }
 
         if (propertyType == Float.class) {
-            return new Float(store.getFloat(propertyId));
+            return Float.valueOf(store.getFloat(propertyId));
         }
 
         if (propertyType == Integer.class) {
@@ -71,7 +65,7 @@ public final class PreferenceStoreAdapter extends PropertyMapAdapter {
         }
 
         if (propertyType == Long.class) {
-            return new Long(store.getLong(propertyId));
+            return Long.valueOf(store.getLong(propertyId));
         }
 
         return null;
