@@ -20,12 +20,7 @@ import org.eclipse.core.runtime.Preferences;
 public final class PreferencesAdapter extends PropertyMapAdapter {
     private Preferences store;
 
-    private Preferences.IPropertyChangeListener listener = new Preferences.IPropertyChangeListener() {
-        @Override
-		public void propertyChange(Preferences.PropertyChangeEvent event) {
-            firePropertyChange(event.getProperty());
-        }
-    };
+    private Preferences.IPropertyChangeListener listener = event -> firePropertyChange(event.getProperty());
 
     public PreferencesAdapter(Preferences toConvert) {
         this.store = toConvert;
@@ -45,12 +40,8 @@ public final class PreferencesAdapter extends PropertyMapAdapter {
 	public Set keySet() {
         Set result = new HashSet();
 
-        String[] names = store.propertyNames();
-
-        for (int i = 0; i < names.length; i++) {
-            String string = names[i];
-
-            result.add(string);
+		for (String name : store.propertyNames()) {
+			result.add(name);
         }
 
         return result;
@@ -67,11 +58,11 @@ public final class PreferencesAdapter extends PropertyMapAdapter {
         }
 
         if (propertyType == Double.class) {
-            return new Double(store.getDouble(propertyId));
+			return Double.valueOf(store.getDouble(propertyId));
         }
 
         if (propertyType == Float.class) {
-            return new Float(store.getFloat(propertyId));
+			return Float.valueOf(store.getFloat(propertyId));
         }
 
         if (propertyType == Integer.class) {
@@ -79,7 +70,7 @@ public final class PreferencesAdapter extends PropertyMapAdapter {
         }
 
         if (propertyType == Long.class) {
-            return new Long(store.getLong(propertyId));
+			return Long.valueOf(store.getLong(propertyId));
         }
 
         return null;
