@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2017 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,6 +10,8 @@
  *     Jan-Hendrik Diederich, Bredex GmbH - bug 201052
  *     Carsten Pfeiffer, Gebit Solutions GmbH - bug 259536
  *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 472654
+ *     Mickael Istria, Red Hat Inc. - [91965] Add ct/editor mapping in user space
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 527069
  *******************************************************************************/
 package org.eclipse.ui.internal.registry;
 
@@ -22,6 +24,7 @@ import java.io.Reader;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.io.Writer;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -29,6 +32,7 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -41,6 +45,7 @@ import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.core.runtime.SafeRunner;
 import org.eclipse.core.runtime.content.IContentType;
+import org.eclipse.core.runtime.content.IContentTypeManager;
 import org.eclipse.core.runtime.dynamichelpers.ExtensionTracker;
 import org.eclipse.core.runtime.dynamichelpers.IExtensionChangeHandler;
 import org.eclipse.core.runtime.dynamichelpers.IExtensionTracker;
@@ -89,11 +94,17 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
          * @return the objects related to the type
 		 */
 		public IEditorDescriptor[] getRelatedObjects(IContentType type) {
-			IEditorDescriptor[] relatedObjects = contentTypeToEditorMappings.get(type);
-			if (relatedObjects == null) {
+			LinkedHashSet<IEditorDescriptor> editors = new LinkedHashSet<>();
+			if (contentTypeToEditorMappingsFromPlugins.containsKey(type)) {
+				editors.addAll(Arrays.asList(contentTypeToEditorMappingsFromPlugins.get(type)));
+			}
+			if (contentTypeToEditorMappingsFromUser.containsKey(type)) {
+				editors.addAll(contentTypeToEditorMappingsFromUser.get(type));
+			}
+			if (editors.isEmpty()) {
 				return EMPTY;
 			}
-			return (IEditorDescriptor[]) WorkbenchActivityHelper.restrictArray(relatedObjects);
+			return (IEditorDescriptor[]) WorkbenchActivityHelper.restrictArray(editors.toArray(new IEditorDescriptor[editors.size()]));
 		}
 
 		/**
@@ -112,7 +123,8 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 
 	}
 
-	private Map<IContentType, IEditorDescriptor[]> contentTypeToEditorMappings = new HashMap<>();
+	private Map<IContentType, IEditorDescriptor[]> contentTypeToEditorMappingsFromPlugins = new HashMap<>();
+	private Map<IContentType, LinkedHashSet<IEditorDescriptor>> contentTypeToEditorMappingsFromUser = new HashMap<>();
 
 	/**
 	 * Cached images - these include images from registered editors (via
@@ -154,18 +166,28 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 
 	private RelatedRegistry relatedRegistry;
 
+	private final IContentTypeManager contentTypeManager;
+
 	public static final String EMPTY_EDITOR_ID = "org.eclipse.ui.internal.emptyEditorTab"; //$NON-NLS-1$
 
     /**
      * Return an instance of the receiver. Adds listeners into the extension
      * registry for dynamic UI purposes.
+     * @param contentTypeManager
      */
-    public EditorRegistry() {
+    public EditorRegistry(IContentTypeManager contentTypeManager) {
         super();
+        this.contentTypeManager = contentTypeManager;
         initializeFromStorage();
         IExtensionTracker tracker = PlatformUI.getWorkbench().getExtensionTracker();
         tracker.registerHandler(this, ExtensionTracker.createExtensionPointFilter(getExtensionPointFilter()));
 		relatedRegistry = new RelatedRegistry();
+		contentTypeManager.addContentTypeChangeListener(event -> {
+			if (contentTypeManager.getContentType(event.getContentType().getId()) == null) {
+				contentTypeToEditorMappingsFromUser.remove(event.getContentType());
+				saveAssociations();
+			}
+		});
     }
 
     /**
@@ -240,25 +262,9 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 
 		for (String contentTypeId : contentTypeVector) {
 			if (contentTypeId != null && contentTypeId.length() > 0) {
-				IContentType contentType = Platform.getContentTypeManager().getContentType(contentTypeId);
+				IContentType contentType = contentTypeManager.getContentType(contentTypeId);
 				if (contentType != null) {
-					IEditorDescriptor [] editorArray = contentTypeToEditorMappings.get(contentType);
-					if (editorArray == null) {
-						editorArray = new IEditorDescriptor[] {editor};
-						contentTypeToEditorMappings.put(contentType, editorArray);
-					}
-					else {
-						IEditorDescriptor [] newArray = new IEditorDescriptor[editorArray.length + 1];
-						if (bDefault) { // default editors go to the front of the line
-							newArray[0] = editor;
-							System.arraycopy(editorArray, 0, newArray, 1, editorArray.length);
-						}
-						else {
-							newArray[editorArray.length] = editor;
-							System.arraycopy(editorArray, 0, newArray, 0, editorArray.length);
-						}
-						contentTypeToEditorMappings.put(contentType, newArray);
-					}
+					addContentTypeBindingFromPlugin(contentType, editor, bDefault);
 				}
 			}
 		}
@@ -267,20 +273,41 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
         mapIDtoEditor.put(editor.getId(), editor);
     }
 
+	public void addContentTypeBindingFromPlugin(IContentType contentType, IEditorDescriptor editor, boolean bDefault) {
+		IEditorDescriptor[] editorArray = contentTypeToEditorMappingsFromPlugins.get(contentType);
+		if (editorArray == null) {
+			editorArray = new IEditorDescriptor[] {editor};
+			contentTypeToEditorMappingsFromPlugins.put(contentType, editorArray);
+		}
+		else {
+			IEditorDescriptor [] newArray = new IEditorDescriptor[editorArray.length + 1];
+			if (bDefault) { // default editors go to the front of the line
+				newArray[0] = editor;
+				System.arraycopy(editorArray, 0, newArray, 1, editorArray.length);
+			}
+			else {
+				newArray[editorArray.length] = editor;
+				System.arraycopy(editorArray, 0, newArray, 0, editorArray.length);
+			}
+			contentTypeToEditorMappingsFromPlugins.put(contentType, newArray);
+		}
+	}
+
     /**
      * Add external editors to the editor mapping.
      */
     private void addExternalEditorsToEditorMap() {
         // Add registered editors (may include external editors).
-        FileEditorMapping maps[] = typeEditorMappings.allMappings();
-        for (int i = 0; i < maps.length; i++) {
-            FileEditorMapping map = maps[i];
+	for (FileEditorMapping map : typeEditorMappings.allMappings()) {
             IEditorDescriptor[] descArray = map.getEditors();
-            for (int n = 0; n < descArray.length; n++) {
-				IEditorDescriptor desc = descArray[n];
-                mapIDtoEditor.put(desc.getId(), desc);
+            for (IEditorDescriptor desc : descArray) {
+				mapIDtoEditor.put(desc.getId(), desc);
             }
         }
+	// Add external editors from OS
+	for (IEditorDescriptor desc : getSortedEditorsFromOS()) {
+		mapIDtoEditor.put(desc.getId(), desc);
+	}
     }
 
     @Override
@@ -304,13 +331,12 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
      * @see IEditorRegistry#PROP_CONTENTS
      */
     private void firePropertyChange(final int type) {
-        Object[] array = getListeners();
-        for (int nX = 0; nX < array.length; nX++) {
-            final IPropertyListener l = (IPropertyListener) array[nX];
+		for (Object listener : getListeners()) {
+			final IPropertyListener propertyListener = (IPropertyListener) listener;
             SafeRunner.run(new SafeRunnable() {
                 @Override
 				public void run() {
-                    l.propertyChanged(EditorRegistry.this, type);
+					propertyListener.propertyChanged(EditorRegistry.this, type);
                 }
             });
         }
@@ -330,7 +356,7 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 			return defaultEditor;
 		}
 
-		IContentType[] contentTypes = Platform.getContentTypeManager().findContentTypesFor(filename);
+		IContentType[] contentTypes = contentTypeManager.findContentTypesFor(filename);
 		for (IContentType contentType : contentTypes) {
 			IEditorDescriptor editor = getDefaultEditor(filename, contentType);
 			if (editor != null) {
@@ -348,7 +374,7 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 	 * @since 3.1
 	 */
 	private IContentType guessAtContentType(String filename) {
-		return Platform.getContentTypeManager().findContentTypeFor(filename);
+		return contentTypeManager.findContentTypeFor(filename);
 	}
 
     /**
@@ -370,15 +396,11 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 	public IFileEditorMapping[] getFileEditorMappings() {
         FileEditorMapping[] array = typeEditorMappings.allMappings();
         final Collator collator = Collator.getInstance();
-		Arrays.sort(array, new Comparator<FileEditorMapping>() {
-
-            @Override
-			public int compare(FileEditorMapping o1, FileEditorMapping o2) {
-				String s1 = o1.getLabel();
-				String s2 = o2.getLabel();
-                return collator.compare(s1, s2);
-            }
-        });
+		Arrays.sort(array, (o1, o2) -> {
+			String s1 = o1.getLabel();
+			String s2 = o2.getLabel();
+		    return collator.compare(s1, s2);
+		});
         return array;
     }
 
@@ -442,9 +464,7 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
      */
     public IEditorDescriptor[] getSortedEditorsFromOS() {
 		List<IEditorDescriptor> externalEditors = new ArrayList<>();
-        Program[] programs = Program.getPrograms();
-
-        for (int i = 0; i < programs.length; i++) {
+		for (Program program : Program.getPrograms()) {
             //1FPLRL2: ITPUI:WINNT - NOTEPAD editor cannot be launched
             //Some entries start with %SystemRoot%
             //For such cases just use the file name as they are generally
@@ -455,12 +475,11 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 
             EditorDescriptor editor = new EditorDescriptor();
             editor.setOpenMode(EditorDescriptor.OPEN_EXTERNAL);
-            editor.setProgram(programs[i]);
+            editor.setProgram(program);
 
             // determine the program icon this editor would need (do not let it
             // be cached in the workbench registry)
-            ImageDescriptor desc = new ExternalProgramImageDescriptor(
-                    programs[i]);
+			ImageDescriptor desc = new ExternalProgramImageDescriptor(program);
             editor.setImageDescriptor(desc);
             externalEditors.add(editor);
         }
@@ -585,7 +604,7 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 		}
 
         StringTokenizer extEditors = new StringTokenizer(defaultEditors,
-				new Character(IPreferenceConstants.SEPARATOR).toString());
+				Character.valueOf(IPreferenceConstants.SEPARATOR).toString());
         while (extEditors.hasMoreTokens()) {
             String extEditor = extEditors.nextToken().trim();
             int index = extEditor.indexOf(':');
@@ -614,13 +633,13 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
         }
     }
 
-    /**
-     * Read the editors defined in the preferences store.
-     *
-     * @param editorTable
-     *            Editor table to store the editor definitions.
-     * @return true if the table is built succesfully.
-     */
+	/**
+	 * Read the editors defined in the preferences store.
+	 *
+	 * @param editorTable
+	 *            Editor table to store the editor definitions.
+	 * @return true if the table is built succesfully.
+	 */
 	private boolean readEditors(Map<String, IEditorDescriptor> editorTable) {
         //Get the workbench plugin's working directory
         IPath workbenchStatePath = WorkbenchPlugin.getDefault().getDataLocation();
@@ -639,21 +658,26 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
                         .append(IWorkbenchConstants.EDITOR_FILE_NAME)
                         .toOSString());
                 reader = new BufferedReader(new InputStreamReader(stream,
-                        "utf-8")); //$NON-NLS-1$
+						StandardCharsets.UTF_8));
             } else {
                 reader = new StringReader(xmlString);
             }
             XMLMemento memento = XMLMemento.createReadRoot(reader);
-            IMemento[] edMementos = memento
-                    .getChildren(IWorkbenchConstants.TAG_DESCRIPTOR);
             // Get the editors and validate each one
-            for (int i = 0; i < edMementos.length; i++) {
+			for (IMemento childMemento : memento.getChildren(IWorkbenchConstants.TAG_DESCRIPTOR)) {
 				EditorDescriptor editor = new EditorDescriptor();
-                boolean valid = editor.loadValues(edMementos[i]);
+				boolean valid = editor.loadValues(childMemento);
                 if (!valid) {
                     continue;
                 }
-                if (editor.getPluginID() != null) {
+				if (isSystem(editor.getId())) {
+					// bug 502514: check if there is internal editor
+					// descriptor (they are always recreated via
+					// addSystemEditors(Map<String, IEditorDescriptor>))
+					lookupEditorFromTable(editorTable, editor);
+					continue;
+				}
+				if (editor.getPluginID() != null) {
                     //If the editor is from a plugin we use its ID to look it
                     // up in the mapping of editors we
                     //have obtained from plugins. This allows us to verify that
@@ -661,24 +685,25 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
                     //and allows us to get the editor description from the
                     // mapping table which has
                     //a valid config element field.
-					IEditorDescriptor validEditorDescritor = mapIDtoEditor.get(editor.getId());
-                    if (validEditorDescritor != null) {
-                        editorTable.put(validEditorDescritor.getId(),
-                                validEditorDescritor);
-                    }
-                } else { //This is either from a program or a user defined
-                    // editor
-                    ImageDescriptor descriptor;
-                    if (editor.getProgram() == null) {
-						descriptor = new ProgramImageDescriptor(editor
-                                .getFileName(), 0);
-					} else {
-						descriptor = new ExternalProgramImageDescriptor(editor
-                                .getProgram());
+					lookupEditorFromTable(editorTable, editor);
+					continue;
+				}
+				// This is either from a program or a user defined editor
+				ImageDescriptor descriptor;
+				if (editor.getProgram() == null) {
+					String fileName = editor.getFileName();
+					if (fileName == null) {
+						String error = "Both editor program and path are null for descriptor id: "; //$NON-NLS-1$
+						error += editor.getId() + " with name: " + editor.getLabel(); //$NON-NLS-1$
+						WorkbenchPlugin.log(error, new IllegalStateException());
+						continue;
 					}
-                    editor.setImageDescriptor(descriptor);
-                    editorTable.put(editor.getId(), editor);
-                }
+					descriptor = new ProgramImageDescriptor(fileName, 0);
+				} else {
+					descriptor = new ExternalProgramImageDescriptor(editor.getProgram());
+				}
+				editor.setImageDescriptor(descriptor);
+				editorTable.put(editor.getId(), editor);
             }
         } catch (IOException e) {
             //Ignore this as the workbench may not yet have saved any state
@@ -703,6 +728,25 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
     }
 
     /**
+	 * @param id
+	 *            descriptor id
+	 * @return true if the id is one of the system internal id's:
+	 *         {@link IEditorRegistry#SYSTEM_EXTERNAL_EDITOR_ID} or
+	 *         {@link IEditorRegistry#SYSTEM_INPLACE_EDITOR_ID}
+	 */
+	private static boolean isSystem(String id) {
+		return IEditorRegistry.SYSTEM_EXTERNAL_EDITOR_ID.equals(id)
+				|| IEditorRegistry.SYSTEM_INPLACE_EDITOR_ID.equals(id);
+	}
+
+	private void lookupEditorFromTable(Map<String, IEditorDescriptor> editorTable, EditorDescriptor editor) {
+		IEditorDescriptor validEditorDescritor = mapIDtoEditor.get(editor.getId());
+		if (validEditorDescritor != null) {
+			editorTable.put(validEditorDescritor.getId(), validEditorDescritor);
+		}
+	}
+
+    /**
      * Read the file types and associate them to their defined editor(s).
      *
      * @param editorTable
@@ -712,108 +756,91 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
      *
      * @throws WorkbenchException
      */
-	public void readResources(Map<String, IEditorDescriptor> editorTable, Reader reader)
-            throws WorkbenchException {
+	public void readResources(Map<String, IEditorDescriptor> editorTable, Reader reader) throws WorkbenchException {
         XMLMemento memento = XMLMemento.createReadRoot(reader);
         String versionString = memento.getString(IWorkbenchConstants.TAG_VERSION);
         boolean versionIs31 = "3.1".equals(versionString); //$NON-NLS-1$
 
-        IMemento[] extMementos = memento
-                .getChildren(IWorkbenchConstants.TAG_INFO);
-        for (int i = 0; i < extMementos.length; i++) {
-            String name = extMementos[i]
-                    .getString(IWorkbenchConstants.TAG_NAME);
-            if (name == null) {
-				name = "*"; //$NON-NLS-1$
-			}
-            String extension = extMementos[i]
-                    .getString(IWorkbenchConstants.TAG_EXTENSION);
-            IMemento[] idMementos = extMementos[i]
-                    .getChildren(IWorkbenchConstants.TAG_EDITOR);
-            String[] editorIDs = new String[idMementos.length];
-            for (int j = 0; j < idMementos.length; j++) {
-                editorIDs[j] = idMementos[j]
-                        .getString(IWorkbenchConstants.TAG_ID);
-            }
-            idMementos = extMementos[i]
-                    .getChildren(IWorkbenchConstants.TAG_DELETED_EDITOR);
-            String[] deletedEditorIDs = new String[idMementos.length];
-            for (int j = 0; j < idMementos.length; j++) {
-                deletedEditorIDs[j] = idMementos[j]
-                        .getString(IWorkbenchConstants.TAG_ID);
-            }
-			String key = name;
-			if (extension != null && extension.length() > 0) {
-				key = key + "." + extension; //$NON-NLS-1$
-			}
-			FileEditorMapping mapping = getMappingFor(key);
-            if (mapping == null) {
-                mapping = new FileEditorMapping(name, extension);
-            }
-			List<IEditorDescriptor> editors = new ArrayList<>();
-            for (int j = 0; j < editorIDs.length; j++) {
-                if (editorIDs[j] != null) {
-					IEditorDescriptor editor = editorTable.get(editorIDs[j]);
-                    if (editor != null) {
-                        editors.add(editor);
-                    }
-                }
-            }
-			List<IEditorDescriptor> deletedEditors = new ArrayList<>();
-            for (int j = 0; j < deletedEditorIDs.length; j++) {
-                if (deletedEditorIDs[j] != null) {
-					IEditorDescriptor editor = editorTable.get(deletedEditorIDs[j]);
-                    if (editor != null) {
-                        deletedEditors.add(editor);
-                    }
-                }
-            }
-
-			List<IEditorDescriptor> defaultEditors = new ArrayList<>();
-
-            if (versionIs31) { // parse the new format
-				idMementos = extMementos[i]
-						.getChildren(IWorkbenchConstants.TAG_DEFAULT_EDITOR);
-				String[] defaultEditorIds = new String[idMementos.length];
-				for (int j = 0; j < idMementos.length; j++) {
-					defaultEditorIds[j] = idMementos[j]
-							.getString(IWorkbenchConstants.TAG_ID);
+		for (IMemento childMemento : memento.getChildren(IWorkbenchConstants.TAG_INFO)) {
+            List<IEditorDescriptor> editors = getEditorDescriptors(childMemento.getChildren(IWorkbenchConstants.TAG_EDITOR), editorTable);
+			editors.forEach(editor -> {
+				if (!mapIDtoEditor.containsKey(editor.getId())) {
+					mapIDtoEditor.put(editor.getId(), editor);
 				}
-				for (int j = 0; j < defaultEditorIds.length; j++) {
-					if (defaultEditorIds[j] != null) {
-						IEditorDescriptor editor = editorTable.get(defaultEditorIds[j]);
-						if (editor != null) {
-							defaultEditors.add(editor);
-						}
+			});
+			String contentTypeId = childMemento.getString(IWorkbenchConstants.TAG_CONTENT_TYPE);
+			if (contentTypeId != null) {
+				IContentType contentType = contentTypeManager.getContentType(contentTypeId);
+				if (contentType != null) {
+					contentTypeToEditorMappingsFromUser.put(contentType, new LinkedHashSet<>(editors));
+				}
+			} else {
+				String name = childMemento.getString(IWorkbenchConstants.TAG_NAME);
+				if (name == null) {
+					name = "*"; //$NON-NLS-1$
+				}
+				String extension = childMemento.getString(IWorkbenchConstants.TAG_EXTENSION);
+				String key = name;
+				if (extension != null && extension.length() > 0) {
+					key = key + "." + extension; //$NON-NLS-1$
+				}
+				FileEditorMapping mapping = getMappingFor(key);
+				if (mapping == null) {
+					mapping = new FileEditorMapping(name, extension);
+				}
+
+				List<IEditorDescriptor> deletedEditors = getEditorDescriptors(childMemento.getChildren(IWorkbenchConstants.TAG_DELETED_EDITOR), editorTable);
+
+				List<IEditorDescriptor> defaultEditors = null;
+				if (versionIs31) { // parse the new format
+					defaultEditors = getEditorDescriptors(childMemento.getChildren(IWorkbenchConstants.TAG_DEFAULT_EDITOR), editorTable);
+				} else { // guess at pre 3.1 format defaults
+					defaultEditors = new ArrayList<>(
+							(editors.isEmpty() ? 0 : 1) + mapping.getDeclaredDefaultEditors().length);
+					if (!editors.isEmpty()) {
+						IEditorDescriptor editor = editors.get(0);
+						defaultEditors.add(editor);
+					}
+					defaultEditors.addAll(Arrays.asList(mapping.getDeclaredDefaultEditors()));
+				}
+
+				// Add any new editors that have already been read from the registry
+				// which were not deleted.
+				for (IEditorDescriptor descriptor : mapping.getEditors()) {
+					if (descriptor != null && !contains(editors, descriptor) && !deletedEditors.contains(descriptor)) {
+						editors.add(descriptor);
 					}
 				}
+				// Map the editor(s) to the file type
+				mapping.setEditorsList(editors);
+				mapping.setDeletedEditorsList(deletedEditors);
+				mapping.setDefaultEditors(defaultEditors);
+				typeEditorMappings.put(mappingKeyFor(mapping), mapping);
 			}
-            else { // guess at pre 3.1 format defaults
-				if (!editors.isEmpty()) {
-					IEditorDescriptor editor = editors.get(0);
-					defaultEditors.add(editor);
-				}
-				defaultEditors.addAll(Arrays.asList(mapping.getDeclaredDefaultEditors()));
-            }
-
-            // Add any new editors that have already been read from the registry
-            // which were not deleted.
-            IEditorDescriptor[] editorsArray = mapping.getEditors();
-            for (int j = 0; j < editorsArray.length; j++) {
-				IEditorDescriptor descriptor = editorsArray[j];
-				if (descriptor != null && !contains(editors, descriptor) && !deletedEditors.contains(descriptor)) {
-					editors.add(descriptor);
-                }
-            }
-            // Map the editor(s) to the file type
-            mapping.setEditorsList(editors);
-            mapping.setDeletedEditorsList(deletedEditors);
-            mapping.setDefaultEditors(defaultEditors);
-            typeEditorMappings.put(mappingKeyFor(mapping), mapping);
-        }
+		}
     }
 
     /**
+	 * @param children
+	 * @param editorTable
+	 * @return
+	 */
+	private List<IEditorDescriptor> getEditorDescriptors(IMemento[] children,
+			Map<String, IEditorDescriptor> editorTable) {
+		if (children == null || children.length == 0) {
+			return new ArrayList<>(0); // need a mutable list
+		}
+		List<IEditorDescriptor> res = new ArrayList<>(children.length);
+		for (IMemento child : children) {
+			String editorId = child.getString(IWorkbenchConstants.TAG_ID);
+			if (editorId != null && editorTable.containsKey(editorId)) {
+				res.add(editorTable.get(editorId));
+			}
+		}
+		return res;
+	}
+
+	/**
      * Determine if the editors list contains the editor descriptor.
      *
      * @param editors
@@ -858,7 +885,7 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
                         .append(IWorkbenchConstants.RESOURCE_TYPE_FILE_NAME)
                         .toOSString());
                 reader = new BufferedReader(new InputStreamReader(stream,
-                        "utf-8")); //$NON-NLS-1$
+						StandardCharsets.UTF_8));
             } else {
                 reader = new StringReader(xmlString);
             }
@@ -952,50 +979,55 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
      */
     public void saveAssociations() {
         //Save the resource type descriptions
-		List<IEditorDescriptor> editors = new ArrayList<>();
+		LinkedHashSet<IEditorDescriptor> editors = new LinkedHashSet<>();
         IPreferenceStore store = WorkbenchPlugin.getDefault()
                 .getPreferenceStore();
 
         XMLMemento memento = XMLMemento
                 .createWriteRoot(IWorkbenchConstants.TAG_EDITORS);
-        memento.putString(IWorkbenchConstants.TAG_VERSION, "3.1"); //$NON-NLS-1$
-        FileEditorMapping maps[] = typeEditorMappings.userMappings();
-        for (int mapsIndex = 0; mapsIndex < maps.length; mapsIndex++) {
-            FileEditorMapping type = maps[mapsIndex];
+		memento.putString(IWorkbenchConstants.TAG_VERSION, "3.1"); //$NON-NLS-1$
+		for (FileEditorMapping fileEditorMapping : typeEditorMappings.userMappings()) {
 			IMemento editorMemento = memento.createChild(IWorkbenchConstants.TAG_INFO);
-			editorMemento.putString(IWorkbenchConstants.TAG_NAME, type.getName());
-			editorMemento.putString(IWorkbenchConstants.TAG_EXTENSION, type.getExtension());
-            IEditorDescriptor[] editorArray = type.getEditors();
+			editorMemento.putString(IWorkbenchConstants.TAG_NAME, fileEditorMapping.getName());
+			editorMemento.putString(IWorkbenchConstants.TAG_EXTENSION, fileEditorMapping.getExtension());
+			IEditorDescriptor[] editorArray = fileEditorMapping.getEditors();
 			for (IEditorDescriptor editor : editorArray) {
 				if (editor == null) {
 					continue;
 				}
-				if (!editors.contains(editor)) {
-                    editors.add(editor);
-                }
+				editors.add(editor);
 				IMemento idMemento = editorMemento.createChild(IWorkbenchConstants.TAG_EDITOR);
 				idMemento.putString(IWorkbenchConstants.TAG_ID, editor.getId());
-            }
-            editorArray = type.getDeletedEditors();
+			}
+			editorArray = fileEditorMapping.getDeletedEditors();
 			for (IEditorDescriptor editor : editorArray) {
 				if (editor == null) {
 					continue;
 				}
-				if (!editors.contains(editor)) {
-                    editors.add(editor);
-                }
+				editors.add(editor);
 				IMemento idMemento = editorMemento.createChild(IWorkbenchConstants.TAG_DELETED_EDITOR);
 				idMemento.putString(IWorkbenchConstants.TAG_ID, editor.getId());
-            }
-            editorArray = type.getDeclaredDefaultEditors();
+			}
+			editorArray = fileEditorMapping.getDeclaredDefaultEditors();
 			for (IEditorDescriptor editor : editorArray) {
 				if (editor == null) {
 					continue;
 				}
-				if (!editors.contains(editor)) {
-                    editors.add(editor);
-                }
+				editors.add(editor);
 				IMemento idMemento = editorMemento.createChild(IWorkbenchConstants.TAG_DEFAULT_EDITOR);
+				idMemento.putString(IWorkbenchConstants.TAG_ID, editor.getId());
+			}
+		}
+		for (Entry<IContentType, LinkedHashSet<IEditorDescriptor>> mapping : contentTypeToEditorMappingsFromUser
+				.entrySet()) {
+            IMemento editorMemento = memento.createChild(IWorkbenchConstants.TAG_INFO);
+			editorMemento.putString(IWorkbenchConstants.TAG_CONTENT_TYPE, mapping.getKey().getId());
+			for (IEditorDescriptor editor : mapping.getValue()) {
+				if (editor == null) {
+					continue;
+				}
+				editors.add(editor);
+				IMemento idMemento = editorMemento.createChild(IWorkbenchConstants.TAG_EDITOR);
 				idMemento.putString(IWorkbenchConstants.TAG_ID, editor.getId());
             }
         }
@@ -1011,6 +1043,12 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 
         memento = XMLMemento.createWriteRoot(IWorkbenchConstants.TAG_EDITORS);
 		for (IEditorDescriptor editor : editors) {
+			if (isSystem(editor.getId())) {
+				// bug 502514: don't persist internal editor descriptors,
+				// they are always recreated via addSystemEditors(Map<String,
+				// IEditorDescriptor>)
+				continue;
+			}
             IMemento editorMemento = memento
                     .createChild(IWorkbenchConstants.TAG_DESCRIPTOR);
 			((EditorDescriptor) editor).saveValues(editorMemento);
@@ -1037,8 +1075,7 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
      */
     public void setFileEditorMappings(FileEditorMapping[] newResourceTypes) {
         typeEditorMappings = new EditorMap();
-        for (int i = 0; i < newResourceTypes.length; i++) {
-            FileEditorMapping mapping = newResourceTypes[i];
+        for (FileEditorMapping mapping : newResourceTypes) {
             typeEditorMappings.put(mappingKeyFor(mapping), mapping);
         }
         extensionImages = new HashMap<>();
@@ -1083,8 +1120,8 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
     private void sortInternalEditors() {
 		IEditorDescriptor[] array = sortEditors(sortedEditorsFromPlugins);
 		sortedEditorsFromPlugins = new ArrayList<>();
-        for (int i = 0; i < array.length; i++) {
-            sortedEditorsFromPlugins.add(array[i]);
+        for (IEditorDescriptor element : array) {
+            sortedEditorsFromPlugins.add(element);
         }
     }
 
@@ -1227,15 +1264,15 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 
     @Override
 	public void removeExtension(IExtension source, Object[] objects) {
-        for (int i = 0; i < objects.length; i++) {
-			if (objects[i] instanceof IEditorDescriptor) {
-				IEditorDescriptor desc = (IEditorDescriptor) objects[i];
+        for (Object object : objects) {
+			if (object instanceof IEditorDescriptor) {
+				IEditorDescriptor desc = (IEditorDescriptor) object;
 
                 sortedEditorsFromPlugins.remove(desc);
                 mapIDtoEditor.values().remove(desc);
                 removeEditorFromMapping(typeEditorMappings.defaultMap, desc);
                 removeEditorFromMapping(typeEditorMappings.map, desc);
-                removeEditorFromContentTypeMappings(contentTypeToEditorMappings, desc);
+				removeEditorFromContentTypeMappings(contentTypeToEditorMappingsFromPlugins, desc);
             }
 
         }
@@ -1294,12 +1331,12 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 	public void addExtension(IExtensionTracker tracker, IExtension extension) {
         EditorRegistryReader eReader = new EditorRegistryReader();
         IConfigurationElement[] elements = extension.getConfigurationElements();
-        for (int i = 0; i < elements.length; i++) {
-            String id = elements[i].getAttribute(IWorkbenchConstants.TAG_ID);
+        for (IConfigurationElement element : elements) {
+            String id = element.getAttribute(IWorkbenchConstants.TAG_ID);
             if (id != null && findEditor(id) != null) {
 				continue;
 			}
-            eReader.readElement(this, elements[i]);
+            eReader.readElement(this, element);
         }
 	}
 
@@ -1546,12 +1583,8 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 
         List<IFileEditorMapping> allMappings = new ArrayList<>(Arrays.asList(standardMappings));
         // mock-up content type extensions into IFileEditorMappings
-        IContentType [] contentTypes = Platform.getContentTypeManager().getAllContentTypes();
-        for (int i = 0; i < contentTypes.length; i++) {
-			IContentType type = contentTypes[i];
-			String [] extensions = type.getFileSpecs(IContentType.FILE_EXTENSION_SPEC);
-			for (int j = 0; j < extensions.length; j++) {
-				String extension = extensions[j];
+		for (IContentType type : contentTypeManager.getAllContentTypes()) {
+			for (String extension : type.getFileSpecs(IContentType.FILE_EXTENSION_SPEC)) {
 				boolean found = false;
 				for (IFileEditorMapping mapping : allMappings) {
 					if ("*".equals(mapping.getName()) && extension.equals(mapping.getExtension())) { //$NON-NLS-1$
@@ -1565,9 +1598,7 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 				}
 			}
 
-			String [] filenames = type.getFileSpecs(IContentType.FILE_NAME_SPEC);
-			for (int j = 0; j < filenames.length; j++) {
-				String wholename = filenames[j];
+			for (String wholename : type.getFileSpecs(IContentType.FILE_NAME_SPEC)) {
 				int idx = wholename.indexOf('.');
 				String name = idx == -1 ? wholename : wholename.substring(0, idx);
 				String extension = idx == -1 ? "" : wholename.substring(idx + 1); //$NON-NLS-1$
@@ -1587,6 +1618,43 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 		}
 
         return allMappings.toArray(new IFileEditorMapping [allMappings.size()]);
+	}
+
+	/**
+	 * @param contentType
+	 * @param editor
+	 * @return whether the association between content-type and editor was defined
+	 *         in user space
+	 */
+	public boolean isUserAssociation(IContentType contentType, IEditorDescriptor editor) {
+		return this.contentTypeToEditorMappingsFromUser.containsKey(contentType)
+				&& this.contentTypeToEditorMappingsFromUser.get(contentType).contains(editor);
+	}
+
+	/**
+	 * @param contentType
+	 * @param editor
+	 */
+	public void removeUserAssociation(IContentType contentType, IEditorDescriptor editor) {
+		if (this.contentTypeToEditorMappingsFromUser.containsKey(contentType)) {
+			this.contentTypeToEditorMappingsFromUser.get(contentType).remove(editor);
+		}
+		saveAssociations();
+	}
+
+	/**
+	 * @param contentType
+	 * @param selectedEditor
+	 */
+	public void addUserAssociation(IContentType contentType, IEditorDescriptor selectedEditor) {
+		if (!this.contentTypeToEditorMappingsFromUser.containsKey(contentType)) {
+			this.contentTypeToEditorMappingsFromUser.put(contentType, new LinkedHashSet<>());
+		}
+		if (!mapIDtoEditor.containsKey(selectedEditor.getId())) {
+			mapIDtoEditor.put(selectedEditor.getId(), selectedEditor);
+		}
+		this.contentTypeToEditorMappingsFromUser.get(contentType).add(selectedEditor);
+		saveAssociations();
 	}
 
 }
